# simply-dns

./: Cargo.toml  LICENSE  README.md
src/: api.rs  client.rs  lib.rs
