[package]
name = "simply-dns"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "An async Rust client for the [Simply.com API](https://www.simply.com/se/docs/api/)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
